--- a/docs/styles/styles.css
+++ b/docs/styles/styles.css
@@ -1,16 +1,106 @@
-html {
-    font-family: "Open Sans", sans-serif;
-    background-color: #202b2b;
-}
-
-#main {
-    width: 600px;
-    margin: 0 auto;
-    background-color: #FF9500;
-    padding: 0px 0px 20px 20px;
-    border: 5px solid black;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
   
-#image-1 {
-    width: 580px;
-}
+  body {
+    font-family: Arial, sans-serif;
+    background-color: black;
+    color: white;
+  }
+  
+  header {
+    background-color: #e50914;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  nav ul {
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    margin: 10px 0;
+  }
+  
+  nav a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+  }
+  
+  nav a:hover {
+    background-color: #d40612;
+  }
+  
+  main {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+  }
+  
+  section {
+    width: 60%;
+    margin-right: 20px;
+  }
+  
+  section h2 {
+    margin-bottom: 20px;
+    color: #e50914;
+  }
+  
+  .featured-item, .category-item {
+    display: flex;
+    margin-bottom: 20px;
+  }
+  
+  .featured-item img, .category-item img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    margin-right: 20px;
+  }
+  
+  .featured-item h3, .category-item h4 {
+    margin-bottom: 10px;
+    color: #e50914;
+  }
+  
+  .featured-item p:last-of-type, .category-item p:last-of-type {
+    font-weight: bold;
+    color: #e50914;
+  }
+  
+  .featured-item button, .category-item button {
+    background-color: #e50914;
+    border: none;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px 0;
+  }
+  
+  ul a {
+    display: block;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+    margin-right: 20px;
+    margin-bottom: 20px;
+  }
+  
+  ul a:hover {
+    background-color: #444;
+  }
+  
+  #category1, #category2 {
+    display: none;
+  }
+  
